Fix '.info-panel' overflow and text alignment

--- a/src/styles/popup/media.less
+++ b/src/styles/popup/media.less
@@ -23,6 +23,7 @@
         }
 
         .info-panel {
+            text-align: right;
             h2 {
                 font-size: 16px;
                 padding-top: 5px;
@@ -65,6 +66,15 @@
     aside {
         .wrapper {
             flex-direction: column;
+
+            svg {
+                margin: 0;
+            }
+
+            .info-panel {
+                max-width: 100%;
+                text-align: center;
+            }
         }
     }
 }
